--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Elliot Bachman" />
     <meta name="keywords" content="HTML, CSS" />
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <title>Coffee Shop</title>
+    <title>Tripple Peaks Coffee</title>
   </head>
   <body>
     <div class="page">
@@ -68,8 +67,6 @@
           <div class="recipes__videos">
             <div>
               <iframe
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -82,8 +79,6 @@
             </div>
             <div>
               <iframe
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -105,21 +100,25 @@
           >
             <fieldset class="form__fieldset">
               <label for="name" class="form__label">
-                Name *<input
+                Name *
+                <input
                   type="text"
                   id="name"
                   class="form__input"
                   name="name"
                   placeholder="Name Surname"
+                  required
                 />
               </label>
               <label for="guests" class="form__label">
-                Number of guests *<input
+                Number of guests *
+                <input
                   type="number"
                   id="guests"
                   name="guests"
                   class="form__input"
                   placeholder="1-8"
+                  required
                 />
               </label>
               <label for="date" class="form__label">
@@ -129,6 +128,7 @@
                   id="date"
                   name="date"
                   class="form__input"
+                  required
                 />
               </label>
               <label for="email" class="form__label">
@@ -139,25 +139,156 @@
                   name="email"
                   class="form__input"
                   placeholder="email@email.com"
+                  required
                 />
               </label>
             </fieldset>
-            <button class="form__button">Book a table</button>
+            <button class="form__button" type="submit">Book a table</button>
             <label for="check" class="form__label form__label_type_checkbox">
               <input
                 type="checkbox"
                 id="check"
                 name="check"
                 class="form__checkbox"
+                required
               />
               I agree with terms of use
             </label>
           </form>
         </section>
-        <section id="menu" class="menu"></section>
-        <section id="contacts" class="about"></section>
+        <section id="menu" class="menu">
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use biodegradable cups. All teas from our collection are $2/cup.
+          </p>
+          <ul class="menu__cards">
+            <li class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Regular (12 oz)<span class="card__list-divider"></span>$1
+                </li>
+                <li class="card__list-item">
+                  Large (16 oz)<span class="card__list-divider"></span>$1.25
+                </li>
+                <li class="card__list-item">
+                  XL (20 oz)<span class="card__list-divider"></span>$1.5
+                </li>
+                <li class="card__list-item">
+                  Party-size (24 oz, decaf)<span
+                    class="card__list-divider"
+                  ></span
+                  >$1.75
+                </li>
+                <li class="card__list-item">
+                  Iced Coffee(16 oz)<span class="card__list-divider"></span
+                  >$1.25
+                </li>
+              </ul>
+            </li>
+            <li class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Macchiato<span class="card__list-divider"></span>$2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado<span class="card__list-divider"></span>$2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha<span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Sunrise in the Bay Area (decaf)<span
+                    class="card__list-divider"
+                  ></span
+                  >$10
+                </li>
+              </ul>
+            </li>
+            <li class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Almond Croissant<span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Banana Bread<span class="card__list-divider"></span>$1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie<span class="card__list-divider"></span>$3
+                </li>
+                <li class="card__list-item">
+                  Blue Velvet Cake<span class="card__list-divider"></span>$3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie<span class="card__list-divider"></span>$2
+                </li>
+                <li class="card__list-item">
+                  Fresh Bug’uette<span class="card__list-divider"></span>$0.25
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <section class="about">
+          <h3 class="about__title">About the coffee shop</h3>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our Coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping our guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact - so we
+              don`t sell single use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
+        <footer id="contacts" class="footer">
+          <div class="footer__content">
+            <div class="footer__logo">
+              <img
+                src="images/logo_coffeeshop_light.svg"
+                alt="Coffee shop logo"
+                class="footer__logo-image"
+              />
+            </div>
+            <div class="footer__social">
+              <h3 class="footer__social-heading">Social Media</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img
+                      src="./images/facebook_white.svg"
+                      alt="Facebook icon"
+                      class="footer__social-icon"
+                    />
+                    Facebook
+                  </a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img
+                      src="./images/instagram_white.svg"
+                      alt="Instagram logo"
+                      class="footer__social-icon"
+                    />
+                    Instagram
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <p class="footer__copyright">&copy; 2024 Elliot Bachman</p>
+        </footer>
       </main>
-      <footer class="footer"></footer>
     </div>
   </body>
 </html>
